Fixed: checkSessionId not working.

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -25,8 +25,9 @@ contentPath = /var/lib/homegear/www/rpc
 
 # Enable Homegear's build-in WebSocket server on this port
 # WARNING: Enabling Websockets without authentication is a high security risk!
+# So make sure, webSocketAuthType is not set to none!
 # Default: false
-webSocket = false
+webSocket = true
 
 # Set ssl to "true" to enable SSL support
 ssl = false
