--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,8 @@
 #!/usr/bin/make -f
 
+override_dh_auto_configure:
+	dh_auto_configure -- --with-curl
+
 override_dh_auto_install:
 	dh_auto_install
 
