Added settings "workingDirectory"

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -20,6 +20,11 @@ devLog = false
 # Default: enableCoreDumps = true
 enableCoreDumps = true
 
+# The working directory of Homegear. E. g. core dumps are written here. If workingDirectory is empty, the
+# executable path is used.
+# Default: workingDirectory =
+workingDirectory = /var/lib/homegear
+
 # The socket files are placed into this directory. If socketPath is empty, the executable path is used.
 # Default: socketPath =
 socketPath = /var/run/homegear
