--- a/misc/System Config/homegear.service
+++ b/misc/System Config/homegear.service
@@ -9,5 +9,6 @@ WantedBy=multi-user.target
 Type=forking
 PIDFile=/var/run/homegear/homegear.pid
 TimeoutSec=300
+LimitRTPRIO=100
 ExecStartPre=/usr/bin/homegear -u homegear -g homegear -p /var/run/homegear/homegear.pid -pre
 ExecStart=/usr/bin/homegear -u homegear -g homegear -p /var/run/homegear/homegear.pid -d
