--- a/misc/System Config/homegear.service
+++ b/misc/System Config/homegear.service
@@ -11,3 +11,8 @@ PIDFile=/var/run/homegear/homegear.pid
 TimeoutSec=300
 ExecStartPre=/usr/bin/homegear -u homegear -g homegear -p /var/run/homegear/homegear.pid -pre
 ExecStart=/usr/bin/homegear -u homegear -g homegear -p /var/run/homegear/homegear.pid
+Restart=on-failure
+TasksMax=infinity
+LimitRTPRIO=infinity
+LimitRTTIME=infinity
+LimitCORE=infinity
