Added permission settings

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -30,8 +30,17 @@ workingDirectory = /var/lib/homegear
 socketPath = /var/run/homegear
 
 # If databasePath is empty, the executable path is used.
-# Default: databasePath =
-databasePath = /var/lib/homegear/db.sql
+# Default: dataPath =
+dataPath = /var/lib/homegear
+
+# Default: dataPathPermissions = 770
+# dataPathPermissions = 770
+
+# Default: dataPathUser =
+# dataPathUser = homegear
+
+# Default: dataPathGroup =
+# dataPathGroup = homegear
 
 # If databaseMemoryJournal is set to true, database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
@@ -129,6 +138,15 @@ gpioPath = /sys/class/gpio
 # Path to scripts which can be executed by calling "runScript"
 # Default: scriptPath = /var/lib/homegear/scripts
 scriptPath = /var/lib/homegear/scripts
+
+# Default: scriptPathPermissions = 770
+# scriptPathPermissions = 770
+
+# Default: scriptPathUser =
+# scriptPathUser = homegear
+
+# Default: scriptPathGroup =
+# scriptPathGroup = homegear
 
 # Path to the family modules.
 # Default: modulePath = /var/lib/homegear/modules
