MQTT: Don't retain PRESS_ variables

--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -22,6 +22,7 @@ homegearId = 1234-5678-9abc
 
 # Tells the MQTT server to retain received MQTT messages. New clients will then
 # receive the last value of a topic on connection.
+# Variables of type "Action" are not retained.
 retain = true
 
 # When authentication by username and password is enabled, uncomment the
