Added lockFilePath settings to main.conf

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -160,6 +160,22 @@ firmwarePath = /usr/share/homegear/firmware
 # Default: tempPath = /var/lib/homegear/tmp
 tempPath = /var/lib/homegear/tmp
 
+# If lockFilePath is empty, the executable path is used. If unset, "/var/lock" is used.
+# Default: lockFilePath = /var/lock
+# lockFilePath = 
+
+# If unset permissions are not set on start of Homegear.
+# Default: lockFilePathPermissions = 770
+# lockFilePathPermissions = 770
+
+# If unset user is not set on start of Homegear.
+# Default: lockFilePathUser =
+# lockFilePathUser = homegear
+
+# If unset group is not set on start of Homegear.
+# Default: lockFilePathGroup =
+# lockFilePathGroup = homegear
+
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
 # To redirect communication to a client's XML RPC event server through a
