Changed default lock file path

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -162,19 +162,19 @@ tempPath = /var/lib/homegear/tmp
 
 # If lockFilePath is empty, the executable path is used. If unset, "/var/lock" is used.
 # Default: lockFilePath = /var/lock
-# lockFilePath = 
+lockFilePath = /var/lock/homegear
 
 # If unset permissions are not set on start of Homegear.
 # Default: lockFilePathPermissions = 770
-# lockFilePathPermissions = 770
+lockFilePathPermissions = 770
 
 # If unset user is not set on start of Homegear.
 # Default: lockFilePathUser =
-# lockFilePathUser = homegear
+lockFilePathUser = homegear
 
 # If unset group is not set on start of Homegear.
 # Default: lockFilePathGroup =
-# lockFilePathGroup = homegear
+lockFilePathGroup = homegear
 
 # Some clients don't provide the option to set their hostname to 
 # "localhost" or "127.0.0.1" so a SSH tunnel normally wouldn't work.
