--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -162,7 +162,9 @@ tempPath = /var/lib/homegear/tmp
 
 # If lockFilePath is empty, the executable path is used. If unset, "/var/lock" is used.
 # Default: lockFilePath = /var/lock
-lockFilePath = /var/lock/homegear
+# /var/run/ is not the correct path for lock files. But as /var/lock is not user-writeable
+# on some systems, we decided to move the lock files to /var/run/homegear.
+lockFilePath = /var/run/homegear
 
 # If unset permissions are not set on start of Homegear.
 # Default: lockFilePathPermissions = 770
