Config file changes

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -47,8 +47,8 @@ dataPath = /var/lib/homegear
 # Default: databaseMemoryJournal = false
 databaseMemoryJournal = false
 
-# If databaseWALJournal is set to true database write operations are faster. This is more secure than
-# settings databaseMemoryJournal. databaseWALJournal and databaseMemoryJournal cannot be used together.
+# If databaseWALJournal is set to true database write operations are faster. This is safer than
+# setting databaseMemoryJournal. databaseWALJournal and databaseMemoryJournal cannot be used together.
 # Default: databaseWALJournal = true
 databaseWALJournal = true
 
@@ -70,12 +70,14 @@ logfilePath = /var/log/homegear
 enableUPnP = true
 
 # Sets the IP address, the UPnP server listens on. By default auto discovery is used, but this might not work,
-# if multiple interfaces exist. Only set specific IP addresses not "0.0.0.0".
+# if multiple interfaces exist. Only set specific IP addresses not "0.0.0.0". Alternatively the interface name can be
+# specified here (e. g. "eth0").
 # Default: uPnPIpAddress =
 # uPnPIpAddress = 
 
 # Sets the IP address, the SSDP server listens on. By default auto discovery is used, but this might not work,
-# if multiple interfaces exist. Only set specific IP addresses not "0.0.0.0".
+# if multiple interfaces exist. Only set specific IP addresses not "0.0.0.0". Alternatively the interface name can be
+# specified here (e. g. "eth0").
 # Default: ssdpIpAddress =
 # ssdpIpAddress =
 
@@ -128,11 +130,11 @@ familyConfigPath = /etc/homegear/families
 # Default: phpIniPath = /etc/homegear/php.ini
 phpIniPath = /etc/homegear/php.ini
 
-# Path to the GPIO root directory. Only relevant if one of the physical devices needs GPIO access.
+# Path to the GPIO root directory. Only relevant if one of the communication modules needs GPIO access.
 # Default: gpioPath = /sys/class/gpio
 gpioPath = /sys/class/gpio
 
-# Export these GPIOs and set permissions when running Homegear with "-s".
+# Export these GPIOs and set permissions when running Homegear as root or starting Homegear with "-s".
 # exportGpios = 5, 6, 7
 
 # Path to scripts which can be executed by calling "runScript"
