MQTT now has multiple processing threads

--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -30,6 +30,24 @@ retain = true
 #userName = myUser
 #password = myPassword
 
+# The number of parallel processing threads.
+processingThreadCount = 5
+
+### Topic payload encodings ###
+
+# Enable topic: homegear/HOMEGEAR_ID/plain/PEERID/CHANNEL/VARIABLE_NAME
+# Contains the value as is. E. g.: 43.7.
+plainTopic = true
+
+# Enable topic: homegear/HOMEGEAR_ID/json/PEERID/CHANNEL/VARIABLE_NAME
+# Puts the value in a JSON array to be JSON-compliant: [43.7].
+jsonTopic = true
+
+# Enable topic: homegear/HOMEGEAR_ID/jsonobj/PEERID/CHANNEL/VARIABLE_NAME
+# Puts the value into a JSON object. The key is value: { "value": 43.7 }.
+jsonobjTopic = true
+
+
 ### TLS options ###
 
 # Set to "true" to enable SSL encryption for MQTT.
