--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -150,6 +150,32 @@ scriptPath = /var/lib/homegear/scripts
 # Default: scriptPathGroup =
 # scriptPathGroup = homegear
 
+# Path where flows are stored.
+# Default: flowsPath = /var/lib/homegear/flows
+flowsPath = /var/lib/homegear/flows
+
+# Default: flowsPathPermissions = 770
+# flowsPathPermissions = 770
+
+# Default: flowsPathUser =
+# flowsPathUser = homegear
+
+# Default: flowsPathGroup =
+# flowsPathGroup = homegear
+
+# Path where flow nodes are stored.
+# Default: flowNodesPath = /var/lib/homegear/flowNodes
+flowNodesPath = /var/lib/homegear/flowNodes
+
+# Default: flowNodesPathPermissions = 550
+# flowNodesPathPermissions = 550
+
+# Default: flowNodesPathUser =
+# flowNodesPathUser = homegear
+
+# Default: flowNodesPathGroup =
+# flowNodesPathGroup = homegear
+
 # Path to the family modules.
 # Default: modulePath = /var/lib/homegear/modules
 modulePath = /var/lib/homegear/modules
@@ -223,6 +249,15 @@ scriptEngineThreadCount = 10
 
 # Default: scriptEngineServerMaxConnections = 10
 scriptEngineServerMaxConnections = 10
+
+# Default: flowsProcessingThreadCount = 10
+flowsThreadCount = 10
+
+# Default: flowsServerMaxConnections = 20
+flowsServerMaxConnections = 20
+
+# Default: maxFlowsPerProcess = 40
+maxFlowsPerProcess = 40
 
 # Default: cliServerMaxConnections = 50
 cliServerMaxConnections = 50
