#Fixes 269 - Database backup path is now settable

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -57,6 +57,10 @@ databaseWALJournal = true
 # Default: databaseSynchronous = true
 databaseSynchronous = true
 
+# By default database backups are stored in "dataPath". With databaseBackupPath you can set an alternative backup
+# directory.
+# databaseBackupPath =
+
 # databaseMaxBackups defines the maximum number of database backups to create. When this number is reached,
 # old backups are deleted.
 # Default: databaseMaxBackups = 10
