Fixed: Supplementary groups are not set.

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -20,6 +20,12 @@ devLog = false
 # Default: enableCoreDumps = true
 enableCoreDumps = true
 
+# If set to true Homegear sets permissions on devices and GPIOs on start. On some systems that might not be
+# desirable or necessary. If Homegear is part of all groups that have access to the needed devices, you can
+# savely set this setting to false.
+# Default: setDevicePermissions = true
+setDevicePermissions = true
+
 # The working directory of Homegear. E. g. core dumps are written here. If workingDirectory is empty, the
 # executable path is used.
 # Default: workingDirectory =
