Changes to automake scripts to detect MySQL and cURL

--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,10 @@ case $host_os in
         ;;
 esac
 
+# Check for libraries
+AC_CHECK_LIB([mysqlclient], [mysql_init], [AM_CONDITIONAL(HAVE_MYSQLCLIENT, true)], AC_MSG_WARN([libmysqlclient is not installed.]))
+AC_CHECK_LIB([curl], [curl_easy_send], [AM_CONDITIONAL(HAVE_CURL, true)], AC_MSG_WARN([libcurl is not installed.]))
+
 AC_DEFINE_UNQUOTED([GITCOMMITSHABASE], [`./getGitCommitBase.sh`], [Define git commit SHA of libhomegear-base])
 AC_DEFINE_UNQUOTED([GITCOMMITSHAHOMEGEAR], [`./getGitCommitHomegear.sh`], [Define git commit SHA of Homegear])
 AC_DEFINE_UNQUOTED([GITBRANCHBASE], [`./getGitBranchBase.sh`], [Define git branch of libhomegear-base])
@@ -89,12 +93,12 @@ AS_IF([test "x$with_ccu2" = "xyes"], [
 	AC_DEFINE(CCU2, [], [Enables features specific for CCU2])
 	])
 
-AC_ARG_WITH([curl], [AS_HELP_STRING([--with-curl], [Use this option when PHP is compiled with --with-curl.])], [with_openssl=yes], [])
-AS_IF([test "x$with_openssl" = "xyes"], [
-	AM_CONDITIONAL(WITH_CURL, true)
-	], [
-	AM_CONDITIONAL(WITH_CURL, false)
-	])
+#AC_ARG_WITH([curl], [AS_HELP_STRING([--with-curl], [Use this option when PHP is compiled with --with-curl.])], [with_openssl=yes], [])
+#AS_IF([test "x$with_openssl" = "xyes"], [
+#	AM_CONDITIONAL(WITH_CURL, true)
+#	], [
+#	AM_CONDITIONAL(WITH_CURL, false)
+#	])
 
 AC_ARG_WITH([i2c], [AS_HELP_STRING([--without-i2c], [Compile without I2C support (disables all I2C interfaces)])], [with_i2c=no], [])
 AS_IF([test "x$with_i2c" != "xno"], [
