Added setting databasePath

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -35,7 +35,7 @@ workingDirectory = /var/lib/homegear
 # Default: socketPath =
 socketPath = /var/run/homegear
 
-# If databasePath is empty, the executable path is used.
+# If dataPath is empty, the executable path is used.
 # Default: dataPath =
 dataPath = /var/lib/homegear
 
@@ -62,6 +62,9 @@ databaseWALJournal = true
 # suffers a power loss the database might get corrupted.
 # Default: databaseSynchronous = true
 databaseSynchronous = true
+
+# By default the database is stored in "dataPath". With databasePath you can set an alternative directory.
+# databasePath =
 
 # By default database backups are stored in "dataPath". With databaseBackupPath you can set an alternative backup
 # directory.
