--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,9 @@ override_dh_auto_install:
 	cp $(CURDIR)/misc/System\ Config/homegear.service $(CURDIR)/debian/homegear/lib/systemd/system/
 	chown root:root $(CURDIR)/debian/homegear/lib/systemd/system/homegear.service
 	chmod 644 $(CURDIR)/debian/homegear/lib/systemd/system/homegear.service
+	cp $(CURDIR)/misc/System\ Config/homegear-stop.sh $(CURDIR)/debian/homegear/lib/systemd/scripts/
+	chown root:root $(CURDIR)/debian/homegear/lib/systemd/scripts/homegear-stop.sh
+	chmod 755 $(CURDIR)/debian/homegear/lib/systemd/scripts/homegear-stop.sh
 
 	mkdir -p $(CURDIR)/debian/homegear/etc/logrotate.d
 	cp $(CURDIR)/misc/System\ Config/logrotate $(CURDIR)/debian/homegear/etc/logrotate.d/homegear
