--- a/misc/System Config/homegear.service
+++ b/misc/System Config/homegear.service
@@ -12,6 +12,7 @@ TimeoutSec=300
 LimitRTPRIO=100
 ExecStartPre=/usr/bin/homegear -u homegear -g homegear -p /var/run/homegear/homegear.pid -pre
 ExecStart=/usr/bin/homegear -u homegear -g homegear -p /var/run/homegear/homegear.pid
+ExecStartPost=/lib/systemd/scripts/homegear-stop.sh
 Restart=on-failure
 TasksMax=infinity
 LimitRTPRIO=infinity
