Closes #263 and closes #271

--- a/misc/Config Directory/rpcclients.conf
+++ b/misc/Config Directory/rpcclients.conf
@@ -38,3 +38,8 @@ authType = basic
 userName = myUser
 
 password = myPassword
+
+# The number of times a request is being sent before giving up and the client
+# needs to register again.
+retries = 3
+
