Changes to PHP Docker script

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -2,7 +2,7 @@
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: interface = ::
-interface = 0.0.0.0
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2001
@@ -58,8 +58,8 @@ webSocketAuthType = session
 [RPCServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
-# Default: rpcInterface = ::
-interface = 0.0.0.0
+# Default: interface = ::
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2002
@@ -120,8 +120,8 @@ diffieHellmanKeySize = 1024
 [RPCServer3]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
-# Default: rpcInterface = ::
-interface = 0.0.0.0
+# Default: interface = ::
+interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2003
@@ -184,8 +184,8 @@ validUsers = homegear
 #[WebServer1]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
-# Default: rpcInterface = ::
-#interface = 0.0.0.0
+# Default: interface = ::
+#interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 #port = 80
@@ -226,8 +226,8 @@ validUsers = homegear
 #[WebServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
-# Default: rpcInterface = ::
-#interface = 0.0.0.0
+# Default: interface = ::
+#interface = ::
 
 # The port number to bind the RPC server to. This setting is mandatory.
 #port = 443
