MQTT prefix now is settable

--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -16,6 +16,10 @@ brokerPort = 1883
 # Name of this client.
 clientName = Homegear
 
+# The prefix to use. Every topic starts with this prefix.
+# Default: homegear
+prefix = homegear
+
 # Unique ID of this Homegear instance. Change this, have you have multiple
 # Homegear installations.
 homegearId = 1234-5678-9abc
