--- a/misc/Config Directory/php.ini
+++ b/misc/Config Directory/php.ini
@@ -708,7 +708,7 @@ default_charset = "UTF-8"
 ;;;;;;;;;;;;;;;;;;;;;;;;;
 
 ; UNIX: "/path1:/path2"
-;include_path = ".:/php/includes"
+include_path = ".:/var/lib/homegear/phpinclude"
 ;
 ; Windows: "\path1;\path2"
 ;include_path = ".;c:\php\includes"
