Added possibility to increase secure memory size

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -248,6 +248,11 @@ replaceClientServerAddress = http://127.0.0.1:9292/bidcos http://$REMOTEIP:9292/
 # Default: prioritizeThreads = true
 prioritizeThreads = true
 
+# The number of bytes to allocate for secure memory. Increase it if you get the GCrypt
+# error "Could not allocate memory"
+# Default: secureMemorySize = 65536
+secureMemorySize = 65536
+
 # Default: workerThreadWindow = 3000
 workerThreadWindow = 3000
 
