--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -249,7 +249,9 @@ replaceClientServerAddress = http://127.0.0.1:9292/bidcos http://$REMOTEIP:9292/
 prioritizeThreads = true
 
 # The number of bytes to allocate for secure memory. Increase it if you get the GCrypt
-# error "Could not allocate memory"
+# error "Could not allocate memory". "0" disables secure memory. The minimum value is
+# 16384. Values smaller than the minimum value are set to the minimum (= default) value.
+# So you can set secureMemorySize to "1" to use the default value defined by GCrypt.
 # Default: secureMemorySize = 65536
 secureMemorySize = 65536
 
