Possibiliy to set connection timeout of RPC clients

--- a/misc/Config Directory/rpcclients.conf
+++ b/misc/Config Directory/rpcclients.conf
@@ -4,7 +4,7 @@
 #
 
 # The name between the square brackets is arbitrary
-[ExampleClient]
+[ExampleClient1]
 # For security reasons you should always use the hostname here. Otherwise
 # the certificate verification doesn't work and Homegear might send you
 # client's password to an unauthorized client.
@@ -43,3 +43,11 @@ password = myPassword
 # needs to register again.
 retries = 3
 
+# The number of milliseconds after which the connection times out.
+timeout = 15000
+
+# Second client with retries and timeout set
+[ExampleClient2]
+hostname = 192.168.178.89
+retries = 5
+timeout = 30000
