--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -265,19 +265,28 @@ scriptEngineMaxThreadsPerScript = 4
 scriptEngineMaxScriptsPerProcess = 50
 
 # Default scriptEngineThreadCount = 10
-scriptEngineThreadCount = 10
+scriptEngineThreadCount = 5
 
 # Default: scriptEngineServerMaxConnections = 10
 scriptEngineServerMaxConnections = 10
 
-# Default: flowsProcessingThreadCount = 10
-flowsThreadCount = 10
+# Default: flowsProcessingThreadCountServer = 10
+flowsProcessingThreadCountServer = 5
+
+# Default: flowsProcessingThreadCountNodes = 10
+flowsProcessingThreadCountNodes = 10
 
 # Default: flowsServerMaxConnections = 20
 flowsServerMaxConnections = 20
 
-# Default: maxFlowsPerProcess = 40
-maxFlowsPerProcess = 40
+# Default: maxNodeThreadsPerProcess = 40
+maxNodeThreadsPerProcess = 40
+
+# Default: ipcThreadCount = 10
+ipcThreadCount = 5
+
+# Default: ipcServerMaxConnections = 20
+ipcServerMaxConnections = 20
 
 # Default: cliServerMaxConnections = 50
 cliServerMaxConnections = 50
