Possibility to set flows data path

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -167,7 +167,7 @@ scriptPath = /var/lib/homegear/scripts
 # Default: enableFlows = true
 enableFlows = true
 
-# Path where flows are stored.
+# Path where Node-BLUE is located.
 # Default: flowsPath = /var/lib/homegear/flows
 flowsPath = /var/lib/homegear/flows
 
@@ -179,6 +179,19 @@ flowsPath = /var/lib/homegear/flows
 
 # Default: flowsPathGroup =
 # flowsPathGroup = homegear
+
+# Path where flow data is stored.
+# Default: flowsDataPath = /var/lib/homegear/flows/data
+flowsDataPath = /var/lib/homegear/flows/data
+
+# Default: flowsDataPathPermissions = 770
+# flowsDataPathPermissions = 770
+
+# Default: flowsDataPathUser =
+# flowsDataPathUser = homegear
+
+# Default: flowsDataPathGroup =
+# flowsDataPathGroup = homegear
 
 # Path to the family modules.
 # Default: modulePath = /var/lib/homegear/modules
