Added setting familyDataPath

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -48,6 +48,19 @@ dataPath = /var/lib/homegear
 # Default: dataPathGroup =
 # dataPathGroup = homegear
 
+# Family data is stored here.
+# Default: familyDataPath = <executable path>/families
+familyDataPath = /var/lib/homegear/families
+
+# Default: familyDataPathPermissions = 770
+# familyDataPathPermissions = 770
+
+# Default: familyDataPathUser =
+# familyDataPathUser = homegear
+
+# Default: familyDataPathGroup =
+# familyDataPathGroup = homegear
+
 # If databaseMemoryJournal is set to true, database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
 # Default: databaseMemoryJournal = false
