--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -206,6 +206,10 @@ flowsDataPath = /var/lib/homegear/flows/data
 # Default: flowsDataPathGroup =
 # flowsDataPathGroup = homegear
 
+# Enables highlighting of active nodes and display of last output in Node-BLUE. As this needs a lot of resources
+# disable it if you finished setting up your logic.
+nodeBlueDebugOutput = true
+
 # Path to the family modules.
 # Default: modulePath = /var/lib/homegear/modules
 modulePath = /var/lib/homegear/modules
@@ -294,7 +298,7 @@ flowsProcessingThreadCountServer = 5
 flowsProcessingThreadCountNodes = 10
 
 # Default: flowsServerMaxConnections = 20
-flowsServerMaxConnections = 20
+flowsServerMaxConnections = 50
 
 # Default: maxNodeThreadsPerProcess = 40
 maxNodeThreadsPerProcess = 40
