--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -1,4 +1,5 @@
 # Homegear configuration file
+# See for more details: https://doc.homegear.eu/data/homegear/configuration.html#main-configuration-main-conf
 
 # Default: runAsUser = root
 # runAsUser = homegear
@@ -6,7 +7,9 @@
 # Default: runAsGroup = root
 # runAsGroup = homegear
 
-# Default: debugLevel = 3
+# Set the debug log level
+# 0=none, 1=critical, 2=error, 3=warning, 4=info,5=debug, >5=more debug information
+# Default: 4
 debugLevel = 4
 
 # Default: memoryDebugging = false
