--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -29,9 +29,9 @@ homegearId = 1234-5678-9abc
 # Variables of type "Action" are not retained.
 retain = true
 
-# When authentication by username and password is enabled, uncomment the
-# following two lines.
-#userName = myUser
+# When authentication by username and password is enabled, uncomment the following two lines and fill in your username
+# and password.
+#username = myUser
 #password = myPassword
 
 # The number of parallel processing threads.
