Added client certificate authentication to RPC server

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -121,6 +121,10 @@ enableUPnP = true
 # openssl req -new -key /etc/homegear/homegear.key -out /etc/homegear/homegear.csr
 # openssl x509 -req -in /etc/homegear/homegear.csr -signkey /etc/homegear/homegear.key -out /etc/homegear/homegear.crt
 
+# Needed for client certificate login
+# Default: caPath = /etc/homegear/homegearca.crt
+caPath = /etc/homegear/homegearca.crt
+
 # Default: certPath = /etc/homegear/homegear.crt
 certPath = /etc/homegear/homegear.crt
 
