--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -41,10 +41,12 @@ webSocket = true
 # Set ssl to "true" to enable SSL support
 ssl = false
 
-# You can specify the HTTP authentication type your XML RPC server
-# uses here. Never ever use basic auth over an unencrypted connection!
-# Can be one of the following: none, basic
-# Default: authType = basic
+# You can specify the authentication type your server uses here.
+# Can be one of the following:
+# - none: No authentication is required
+# - basic: Use basic authentication
+# - cert: Use certificate authentication (only works when "ssl" is "true")
+# Default: authType = cert
 authType = none
 
 # You can specify the websocket authentication type here. Never ever use basic auth
@@ -97,10 +99,12 @@ webSocket = true
 # Set ssl to "true" to enable SSL support
 ssl = true
 
-# You can specify the HTTP authentication type your XML RPC server
-# uses here.
-# Can be one of the following: none, basic
-# Default: authType = basic
+# You can specify the authentication type your server uses here.
+# Can be one of the following:
+# - none: No authentication is required
+# - basic: Use basic authentication
+# - cert: Use certificate authentication (only works when "ssl" is "true")
+# Default: authType = cert
 authType = none
 
 # You can specify the websocket authentication type here. Never ever use basic auth
@@ -158,10 +162,12 @@ webSocket = true
 # Set ssl to "true" to enable SSL support
 ssl = true
 
-# You can specify the HTTP authentication type your XML RPC server
-# uses here.
-# Can be one of the following: none, basic
-# Default: authType = basic
+# You can specify the authentication type your server uses here.
+# Can be one of the following:
+# - none: No authentication is required
+# - basic: Use basic authentication
+# - cert: Use certificate authentication (only works when "ssl" is "true")
+# Default: authType = cert
 authType = basic
 
 # You can specify the websocket authentication type here. Never ever use basic auth
@@ -214,14 +220,24 @@ validUsers = homegear
 # Set ssl to "true" to enable SSL support
 #ssl = false
 
-# You can specify the HTTP authentication type your XML RPC event server
-# uses here.
-# Can be one of the following: none, basic
-# Default: authType = basic
+# You can specify the authentication type your server uses here.
+# Can be one of the following:
+# - none: No authentication is required
+# - basic: Use basic authentication
+# - cert: Use certificate authentication (only works when "ssl" is "true")
+# Default: authType = cert
 #authType = none
 
+# You can specify the websocket authentication type here. Never ever use basic auth
+# over an unencrypted connection!
+# Can be one of the following: none, basic, session
+# "session" checks for the PHP session variable "authorized", which must be set to
+# "true" for the authentication to succeed.
+# Default: webSocketAuthType = session
+#webSocketAuthType = session
+
 # Redirect HTTP requests to this address
-# recdirectTo = https://myserver.com
+# redirectTo = https://myserver.com
 
 #[WebServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
@@ -256,11 +272,21 @@ validUsers = homegear
 # Set ssl to "true" to enable SSL support
 #ssl = true
 
-# You can specify the HTTP authentication type your XML RPC event server
-# uses here.
-# Can be one of the following: none, basic
-# Default: authType = basic
+# You can specify the authentication type your server uses here.
+# Can be one of the following:
+# - none: No authentication is required
+# - basic: Use basic authentication
+# - cert: Use certificate authentication (only works when "ssl" is "true")
+# Default: authType = cert
 #authType = none
+
+# You can specify the websocket authentication type here. Never ever use basic auth
+# over an unencrypted connection!
+# Can be one of the following: none, basic, session
+# "session" checks for the PHP session variable "authorized", which must be set to
+# "true" for the authentication to succeed.
+# Default: webSocketAuthType = session
+#webSocketAuthType = session
 
 # The size in bit of the temporary Diffie-Hellman parameters generated at start up.
 # This setting is ignored when Diffie-Hellman parameters are read from file.
