Added client certificate authentication to RPC client

--- a/misc/Config Directory/rpcclients.conf
+++ b/misc/Config Directory/rpcclients.conf
@@ -31,13 +31,17 @@ forceSSL = true
 
 # You can specify the HTTP authentication type your XML RPC event server
 # uses here.
-# Can be one of the following: none, basic
+# Can be one of the following: none, basic, cert
 # Default: authType = none
 authType = basic
 
-userName = myUser
-
+# For basic auth set username and password
+username = myUser
 password = myPassword
+
+# For cert auth set client certificate and key file
+certFile = /path/to/client.crt
+keyFile = /path/to/client.key
 
 # The number of times a request is being sent before giving up and the client
 # needs to register again.
